--- a/TimeKeepingAndPayroll/Views/TimeOffs/Create.cshtml
+++ b/TimeKeepingAndPayroll/Views/TimeOffs/Create.cshtml
@@ -15,7 +15,7 @@
         <h4>TimeOff</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group" style="display:none">
             @Html.LabelFor(model => model.EmployeeID, "EmployeeID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("EmployeeID", null, htmlAttributes: new { @class = "form-control" })
